--- a/tests/log_test/CMakeLists.txt
+++ b/tests/log_test/CMakeLists.txt
@@ -3,6 +3,12 @@ include_directories(${GTEST_INCLUDE_DIRS})
 
 add_executable(test_log test_log.cc)
 
-target_link_libraries(test_log HPGS ${GTEST_LIBRARIES} pthread)
+set(LIBS yaml-cpp::yaml-cpp
+         pthread
+         ${GTEST_LIBRARIES}
+         HPGS
+)
+
+target_link_libraries(test_log ${LIBS})
 
 add_test(NAME LOG_TEST COMMAND test_log)
