--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O0 -g -std=c++11 -Wall -Wno-depre
 find_package(yaml-cpp REQUIRED)
 find_package(jsoncpp REQUIRED)
 
-file(GLOB DIR_SRC "src/*.cc")
+file(GLOB_RECURSE DIR_SRC "${CMAKE_SOURCE_DIR}/src/*.cc")
 
 set(LIBS yaml-cpp::yaml-cpp
          jsoncpp
@@ -17,7 +17,16 @@ set(LIBS yaml-cpp::yaml-cpp
 add_library(HPGS SHARED ${DIR_SRC})
 #add_library(HPGS_static static ${LIB_SRC})
 #SET_TARGET_PROPERTIES (HPGS_static PROPERTIES OUTPUT_NAME "HPGS")
-include_directories(${PROJECT_SOURCE_DIR}/include)
+
+file(GLOB_RECURSE H_FILES "${CMAKE_SOURCE_DIR}/include/*.h" )
+set(DIRLIST "")
+foreach(file ${H_FILES})
+    get_filename_component(dir ${file} DIRECTORY)
+    list(APPEND DIRLIST ${dir})
+endforeach()
+list(REMOVE_DUPLICATES DIRLIST)
+
+include_directories(${DIRLIST})
 
 target_link_libraries(HPGS PRIVATE ${LIBS})
 
