--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,6 @@
 #add_subdirectory(log_test)
 #add_subdirectory(config_test)
-add_subdirectory(fibre_test)
-add_subdirectory(thread_test)
+#add_subdirectory(fibre_test)
+#add_subdirectory(thread_test)
+add_subdirectory(scheduler_test)
+add_subdirectory(iomanager_test)
