--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,4 +5,5 @@
 #add_subdirectory(scheduler_test)
 #add_subdirectory(iomanager_test)
 #add_subdirectory(hook_test)
-add_subdirectory(socket_test)
+#add_subdirectory(socket_test)
+add_subdirectory(bytearray_test)
